--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -58,3 +58,12 @@ jwt:
   json-exp-roles: "/roles"
 cors:
   allowed-origins: "http://localhost:4200,http://localhost:8080"
+
+adapters:
+  r2dbc:
+    host: "localhost"
+    port: 5432
+    database: "ms-request"
+    schema: "public"
+    username: "postgres"
+    password: "admin123"
