--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8090
 spring:
   application:
     name: "LoanRequest"
@@ -63,7 +63,7 @@ adapters:
   r2dbc:
     host: "localhost"
     port: 5432
-    database: "ms-request"
+    database: "ms_request"
     schema: "public"
     username: "postgres"
     password: "admin123"
